--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -9,9 +9,9 @@
         </span>
         
         <span class="menu">
-          <!-- <button mat-icon-button class="favorite" aria-label="favorite" matBadge="{{ favcount }}" matBadgeSize="small" (click)="linktoFavorite()">
+          <button mat-icon-button class="favorite" aria-label="favorite" matBadge="{{ favcount }}" matBadgeSize="small" (click)="linktoFavorite()">
             <img src="../../../assets/img/icon_fav.svg" alt="link to Favorite">
-          </button> -->
+          </button>
 
           <button mat-icon-button class="user" aria-label="user" (click)="linktoProfile()">
             <img src="{{pictureUrl}}" alt="user">
