--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -129,6 +129,7 @@ header {
   .guide{
     position: absolute;
     font-size: 13px;
+    font-weight: 700;
     color: #000;
     width: 100%;
     margin: auto;
