--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -231,12 +231,12 @@
               <!-- panel body -->
               <div class='panel-content'>
                 <mat-form-field  hintLabel="{{ 'Required' | translate }}" appearance="outline">
+                  <mat-label>{{ 'SpotNameEx' | translate }}</mat-label>
                   <textarea
                     matInput
                     #spotName
                     name="spotName{{i}}"
                     maxlength="30"
-                    placeholder="{{ 'SpotNameEx' | translate }}"
                     required
                     #inputinfo="ngModel"
                     [(ngModel)]="item.spotName"
@@ -326,11 +326,11 @@
       </div>
       <!-- スポットを追加する -->
       <div *ngIf="row" class="myplan-box">
+        <button class="clear" [disabled]="!row.planSpots" (click)="onClickClearAllSpot()">{{"labelClear"|translate}}</button>
         <button mat-button class="add-spot" (click)="onClickAddSpot()">
           <span class='label'>{{ "AddSpot" | translate }}</span>
           <span class='count'>{{"NumberOfSpots"|translate}}{{ row.planSpots ? row.planSpots.length : 0 }} / {{"Max6spots"|translate}}</span>
         </button>
-        <button class="clear" [disabled]="!row.planSpots" (click)="onClickClearAllSpot()">{{"labelClear"|translate}}</button>
       </div>
 
       <div class='spacer'>
@@ -386,21 +386,21 @@
         </div>
       </mat-card-content>
     </mat-card>
-    <div class="set">
-      <div class="date">
-        <!-- 旅行予定日 -->
+    <!-- 旅行予定日 -->
+    <!-- 出発時間 -->
+    <!-- 終了時間 -->
+    <!-- <div class="set">
+      <div class="date">        
         <span>{{ row.travelDate | date:"yyyy/MM/dd (EEE)" }}</span>
       </div>
-      <div class="time">
-        <!-- 出発時間 -->
+      <div class="time">        
         <span>{{"StartTime"|translate}}：{{ row.startTime }}</span>
         <span>
           <img src="../../../assets/img/line24.svg" alt=""/>
-        </span>
-        <!-- 終了時間 -->
+        </span>        
         <span>{{"EndTime"|translate}}：{{ endTime }}</span>
       </div>
-    </div>
+    </div> -->
     <div class='planhead'>
       <div *ngIf="row.picturePreviewUrl || row.pictureUrl || row.refPictureUrl" class="picpreview">
         <img width="100%" height="100%" [src]="row.imageCropped ?? row.picturePreviewUrl ?? row.pictureUrl ?? row.refPictureUrl" />
@@ -504,10 +504,18 @@
               <div class="card-bottom">
                 <mat-list class="pt0">
                   <mat-list-item class="subheading">
-                    <p class="memo" [ngClass]="{'close':!collapse}" *ngIf="item.memo">{{ item.memo }}</p>
-                    <div class="close" (click)="isCollapse()">閉じる</div>
+                    <ng-container *ngIf="item.memo">
+                      <p class="memo" [ngClass]="{'exps':!collapse}" >{{ item.memo }}</p>
+                      <div class="close dw" *ngIf="collapse" (click)="isCollapse()">
+                        {{"Close"|translate}}
+                      </div>
+                      <div class="close up" *ngIf="!collapse" (click)="isCollapse()">
+                        {{"Open"|translate}}
+                      </div>
+                    </ng-container>
                     <p *ngIf="!item.memo">{{ item.subheading }}</p>
                   </mat-list-item>
+
                   <mat-list-item class="row"
                     *ngIf="item.spotAccess && (item.spotAccess.nearest | langFilter: lang) !== '';else empNearrest">
                     <span class="directions">
@@ -515,17 +523,24 @@
                     </span>
                   </mat-list-item>
                   <ng-template #empNearrest>
-                    <span>empty nearest</span>
+                    <mat-list-item class="row">
+                      <span class="directions">{{"NearestSt"|translate}}&nbsp;ーーーー</span>
+                    </mat-list-item>
                   </ng-template>
-                  <mat-list-item class="row">
-                    <span class="businesshour" *ngIf="item.businessHourHead;else empBusinessHour">
+
+                  <mat-list-item class="row"
+                  *ngIf="item.businessHourHead;else empBusinessHour">
+                    <span class="businesshour">
                       <span class="color">{{ "Businesshours" | translate }}</span>：{{ item.businessHourHead }}</span>
                       <span class="regularholiday" *ngIf="item.holiday">
-                        &emsp;{{ "Holiday" | translate }}：{{ item.holiday }}</span>
-                      <ng-template #empBusinessHour>
-                        <span>empty businesshour</span>
-                      </ng-template>
+                        &emsp;{{ "Holiday" | translate }}&nbsp;{{ item.holiday }}</span>
                   </mat-list-item>
+                  <ng-template #empBusinessHour>
+                    <mat-list-item class="row">                      
+                      <span class="businesshour">
+                        <span class="color">{{ "Businesshours" | translate }}</span>&nbsp;ー:ー&nbsp;~&nbsp;ー:ー</span>
+                    </mat-list-item>
+                  </ng-template>
                 </mat-list>
               </div>
             </div>
