--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -571,7 +571,8 @@
               top: 0;
             }
             .mat-form-field-infix{
-              border-top: 0;
+              // border-top: 0;
+              padding-top: 5px;
             }
           }
 
@@ -827,14 +828,13 @@
     display: flex;
     align-items: center;
     position: relative;
-
+    justify-content: center;
     button.add-spot{
       display: flex;
       align-items:flex-start;
       font-size: 16px;
       color: $color-pnk02;
-      padding-left: 44px;
-
+      
       &::before{
         content: url("../../../assets/img/add_spot.svg");
         width: 40px;
@@ -1065,7 +1065,7 @@
 
         .lt{
           display: flex;
-          align-items: flex-start;
+          align-items: center;
           .mark{
             min-width: 30px;
             height: 36px;
@@ -1513,11 +1513,14 @@
 
             &.subheading{
               overflow: hidden;
+              ::ng-deep .mat-list-item-content{
+                flex-direction: column;
+              }
               p{
                 font-size: 15px;
                 font-weight: 400;
                 margin-block-start: 1em;
-                margin-block-end: 1em;
+                margin-block-end: 1.5em;
                 line-height: 1.8;
                 color: #4d4d4d;
                 display: -webkit-box;
@@ -1526,17 +1529,44 @@
                 // margin-block-end: 1em;
                 // -webkit-line-clamp: 2;
 
+                
                 &.memo{
                   background-color: #f6f5ef;
                   padding: 0.3em 0.5em;
                   border-radius: 0.5em;
                   width: 100%;
 
-                  &.close{
+                  &.exps{
                     display: -webkit-box;
                     -webkit-line-clamp: 3;
                     -webkit-box-orient: vertical;
                     overflow: hidden;
+                  }
+                }
+              }
+
+              .close{
+                line-height: 14px;
+                background-color: #878787;
+                border-radius: 3px;
+                padding: 1px 4px;
+                display: flex;
+                position: absolute;
+                bottom: 4px;
+                right: 7px;
+                font-size: 12px;
+                color: #fff;
+                font-weight: 100;
+                &.dw{
+                  &::before{
+                    content: url("../../../assets/img/arrow_up_wt.svg");
+                    width: 10px;
+                  }
+                }
+                &.up{
+                  &::before{
+                    content: url("../../../assets/img/arrow_dw_wt.svg");
+                    width: 10px;
                   }
                 }
               }
