--- a/src/app/pages/top/top.component.html
+++ b/src/app/pages/top/top.component.html
@@ -30,7 +30,7 @@
       <div class="inputWrapper">
         <div class='title' (click)="linktolist()">{{"FindEveryoneRecommendations" | translate}}</div>
         <input type="text" 
-        placeholder="「京都女子旅」「スカイツリー」..." 
+        placeholder="{{'SearchGuide'|translate}}" 
         class="keyword"
         (keyup.enter)="onKeywordSearch($event)"
         (blur)="onKeywordSearch($event)"/>
