--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -308,7 +308,7 @@
             <p class="bold">{{ "MyPlan#Sec2" | translate }}</p>
             <p class='under'>{{ "MyPlan#Sec3" | translate }}</p>
             <div class="inputWrapper">
-              <input placeholder="「京都女子旅」「スカイツリー」..." class="keyword"
+              <input placeholder="{{'SearchGuide'| translate}}" class="keyword"
               #keywordInput
               (keyup.enter)="onKeywordSearch($event)"
               (blur)="onKeywordSearch($event)"/>
