--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -4,8 +4,8 @@
       {{ "ArragePlan" | translate }}
     </div>
     <div class="switchView" [ngClass]="{'en':lang==='en'}">
-      <input type="checkbox" id="switch-view" (click)="onClickEdit()" [checked]="isEdit" [disabled]="!row">
-      <label for="switch-view"><span></span></label>
+      <input type="checkbox" id="switch-view1" (click)="onClickEdit()" [checked]="isEdit" [disabled]="!row">
+      <label for="switch-view1"><span></span></label>
       <div id="swImg"></div>
     </div>
   </div>
@@ -352,8 +352,8 @@
       <div class="bottom">
         <div></div>
         <div class="switchView" [ngClass]="{'en':lang==='en'}">
-          <input type="checkbox" id="switch-view" (click)="onClickEdit()" [checked]="isEdit" [disabled]="!row">
-          <label for="switch-view"><span></span></label>
+          <input type="checkbox" id="switch-view2" (click)="onClickEdit()" [checked]="isEdit" [disabled]="!row">
+          <label for="switch-view2"><span></span></label>
           <div id="swImg"></div>
         </div>
       </div>
@@ -592,8 +592,8 @@
     <div class="bottom prev">
       <div></div>
       <div class="switchView" [ngClass]="{'en':lang==='en'}">
-        <input type="checkbox" id="switch-view" (click)="onClickEdit()" [checked]="isEdit" [disabled]="!row">
-        <label for="switch-view"><span></span></label>
+        <input type="checkbox" id="switch-view3" (click)="onClickEdit()" [checked]="isEdit" [disabled]="!row">
+        <label for="switch-view3"><span></span></label>
         <div id="swImg"></div>
       </div>
     </div>
