--- a/src/app/parts/confirm-message-dialog/confirm-message-dialog.component.html
+++ b/src/app/parts/confirm-message-dialog/confirm-message-dialog.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>{{ data.title | translate }}</h2>
+<h2 mat-dialog-title *ngIf="data.title">{{ data.title | translate }}</h2>
 <mat-dialog-content>
   <span class="text">{{ data.text | translate }}</span>
   <span class="subtext" *ngIf="data.subText">{{ data.subText | translate }}</span>
