--- a/src/app/parts/confirm-message-dialog/confirm-message-dialog.component.scss
+++ b/src/app/parts/confirm-message-dialog/confirm-message-dialog.component.scss
@@ -37,7 +37,8 @@
     margin-top: 30px;
     margin-bottom: -20px;
     button{
-      width: 100px;
+      //width: 100px;
+      min-width: 100px;
       height: 40px;
 
       &.cancel{
