REMOJU-371 エラーメッセージ改良

--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -371,7 +371,7 @@
               <span class="planName">{{ row.planName }}</span>
             </ng-container>
             <ng-template #noplan>
-              <a href="javascript:void(0)" (click)="onClickEdit()">{{"ErrorMsgRequiredPlanName"|translate}}
+              <a href="javascript:void(0)" (click)="onClickEdit()">{{"RequiredPlanName"|translate}}
               </a>
             </ng-template>
           </div>
