REMOJU-377 プランスポット一覧 項目追加

--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.html
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.html
@@ -66,6 +66,12 @@
             <span class='view'>
               {{item.pvQtyAll}} view
             </span>
+            <span class='view'>
+              プランに入れた人{{item.planSpotQty}} 人
+            </span>
+            <span class='view'>
+              レビュー評価{{item.reviewAvg}}
+            </span>
             <span *ngIf="!isProd">
               {{item.id}}
             </span>
