REMOJU-380 プラン作成　出発地到着地の候補表示不具合

--- a/src/app/parts/google-spot-dialog/google-spot-dialog.component.html
+++ b/src/app/parts/google-spot-dialog/google-spot-dialog.component.html
@@ -6,6 +6,7 @@
       <mat-label>{{ 'GoogleKeyword' | translate }}</mat-label>
       <input
         matInput
+        #keyword
         id="keyword"
         value="{{ place ? place.name : '' }}" />
     </mat-form-field>
