--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -61,6 +61,9 @@
             </div>
           </mat-expansion-panel-header>
           <ng-container *ngIf="row">
+            <div class='sub'>
+              旅のしおり（プラン）
+            </div>
             <!-- 写真 -->
             <div class='select'>
               <div class="fileselector">
@@ -71,7 +74,7 @@
                 class="selectPhoto"
                 (change)="onClickSelectPhotoPlan($event)" />
               </div>
-              <label>プランのイメージ画像を選択</label>
+              <label>旅のしおりにふさわしいプランイメージを貼りましょう</label>
             </div>
             <div *ngIf="row.picturePreviewUrl || row.pictureUrl" class="picpreview">
               <img width="100%" height="100%" [src]="row.imageCropped ?? row.picturePreviewUrl ?? row.pictureUrl" />
@@ -89,8 +92,7 @@
                 #inputinfo="ngModel"
                 [(ngModel)]="row.planExplanation"
                 (change)="onChange(false)"></textarea>
-                <mat-hint align="end">{{planExplanation.value?.length || 0}}{{ "Characters" | translate }}</mat-hint>
-                <mat-hint><a href="javascript:void(0);" (click)="row.planExplanation='';">{{"labelClear" | translate}}</a></mat-hint>
+                <mat-hint align="end">{{planExplanation.value?.length || 0}}/100{{ "Characters" | translate }} &nbsp;<a href="javascript:void(0);" (click)="row.planExplanation='';">{{"labelClear" | translate}}</a></mat-hint>
             </mat-form-field>
             <!-- フリー文章 -->
             <mat-form-field appearance="outline">
@@ -103,8 +105,8 @@
                 #inputinfo="ngModel"
                 [(ngModel)]="row.memo"
                 (change)="onChange(false)"></textarea>
-                <mat-hint align="end">{{memo.value?.length || 0}}{{ "Characters" | translate }}</mat-hint>
-                <mat-hint><a href="javascript:void(0);" (click)="row.memo='';">{{"labelClear" | translate}}</a></mat-hint>
+                <mat-hint align="end">{{memo.value?.length || 0}}/100{{ "Characters" | translate }}&nbsp;<a href="javascript:void(0);" (click)="row.memo='';">{{"labelClear" | translate}}</a></mat-hint>
+                
             </mat-form-field>
             <!-- カテゴリー選択ボタン -->
             <button mat-stroked-button (click)="onClickAreaCategory()">
@@ -230,6 +232,9 @@
               </mat-expansion-panel-header>
               <!-- panel body -->
               <div class='panel-content'>
+                <div class='sub'>
+                  旅のしおり（スポット）
+                </div>
                 <mat-form-field  hintLabel="{{ 'Required' | translate }}" appearance="outline">
                   <mat-label>{{ 'SpotNameEx' | translate }}</mat-label>
                   <textarea
@@ -254,7 +259,7 @@
                     accept="image/*"
                     (change)="onClickSelectPhotoSpot($event, item)" />
                   </div>
-                  <label>{{"Selectimagespot"|translate}}</label>
+                  <label>旅のしおりにふさわしいスポットイメージを貼りましょう</label>
                 </div>
 
                 <div *ngFor="let picture of item.planUserpictures; index as j;trackBy: myTrackBy" class="picpreview">
@@ -279,8 +284,7 @@
                     [(ngModel)]="item.memo"
                     (change)="onChange(false)">
                   </textarea>
-                  <mat-hint align="end">{{memo.value?.length || 0}}{{ "Characters" | translate }}</mat-hint>
-                  <mat-hint><a href="javascript:void(0);" (click)="item.memo='';">{{"labelClear" | translate}}</a></mat-hint>
+                  <mat-hint align="end">{{memo.value?.length || 0}}/100{{ "Characters" | translate }}&nbsp;<a href="javascript:void(0);" (click)="item.memo='';">{{"labelClear" | translate}}</a></mat-hint>
                 </mat-form-field>
 
                 <!-- 滞在時間 -->
