--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -13,7 +13,7 @@
             <img src="../../../assets/img/icon_fav.svg" alt="link to Favorite">
           </button>
 
-          <button mat-icon-button class="user" aria-label="user" (click)="linktoProfile()">
+          <button mat-icon-button class="user" aria-label="user" (click)="linktoMyplan()">
             <img src="{{pictureUrl}}" alt="user">
           </button>
 
