--- a/src/app/pages/mypage-userprofile/mypage-userprofile.component.html
+++ b/src/app/pages/mypage-userprofile/mypage-userprofile.component.html
@@ -1,17 +1,16 @@
 <div class='header'>
   <div class='row'>
-    <div class='title'>{{"UserProfile"|translate}}</div>
-    <button type="button" class="edit" (click)="onClickPreviewSwitch()">
-      <ng-container *ngIf="isPreview; else isEdit">
-        {{"isEdit"|translate}}
-      </ng-container>
-      <ng-template #isEdit>
-        {{"Preview"|translate}}
-      </ng-template>
-    </button>
+    <div class='label'>
+      {{"EditUserProfileTitle"|translate}}
+    </div>
+    <div class="switchViewProf" [ngClass]="{'en':lang==='en'}">
+      <input type="checkbox" id="switch-view2" (click)="onClickPreviewSwitch()" [checked]="isPreview">
+      <label for="switch-view2"><span></span></label>
+      <div id="swImg"></div>
+    </div>
   </div>
-  <div class='label'>
-    {{"EditUserProfileTitle"|translate}}
+  <div class='row'>
+    <span class='small'>年代は公表されます。設定は編集の生年月日で行います。</span>　
   </div>
 </div>
 
@@ -22,7 +21,6 @@
         <div class="card-box">
           <div class="card-header">
             <div class="cover">
-              <button mat-button class="return" (click)="onClickPreviewSwitch()">{{ "Preview" | translate }}</button>
               <div class="wrap">
                 <img
                   *ngIf="data.coverImageCropped || data.coverPreviewUrl || data.coverUrl"
@@ -218,14 +216,11 @@
 
   <div class='footer'>
     <div class='row'>
-      <button type="button" class="edit" (click)="onClickPreviewSwitch()">
-        <ng-container *ngIf="isPreview; else isEdit">
-        {{"isEdit"|translate}}
-      </ng-container>
-      <ng-template #isEdit>
-        {{"Preview"|translate}}
-      </ng-template>
-      </button>
+      <div class="switchViewProf" [ngClass]="{'en':lang==='en'}">
+        <input type="checkbox" id="switch-view2" (click)="onClickPreviewSwitch()" [checked]="isPreview">
+        <label for="switch-view2"><span></span></label>
+        <div id="swImg"></div>
+      </div>
     </div>
   </div>
 </form>
