--- a/src/app/pages/mypage-userprofile/mypage-userprofile.component.scss
+++ b/src/app/pages/mypage-userprofile/mypage-userprofile.component.scss
@@ -7,6 +7,10 @@
   .row{
     display: flex;
     justify-content: space-between;
+    .small{
+      font-size: 10px;
+      color: #afafaf;
+    }
     .title{
       font-size: 14px;
     }
@@ -32,6 +36,7 @@
     line-height: 24px;
     text-align: center;
   }
+  @include switchViewProf();
 }
 .footer{
   display: flex;
@@ -53,6 +58,7 @@
       font-weight: 700;
     }
   }
+  @include switchViewProf();
 }
 .mat-card{
   .card-box{
@@ -240,7 +246,7 @@
     //   margin-bottom: 1px;
     // }
     .label{
-      background-color: #AAAAAA;
+      background-color: #5E5E5E;
       width: 96px;
       height: 23px;
       border-radius: 5px;
@@ -366,7 +372,7 @@
         top: 0;
         width: 100%;
         height: 100%;
-        background-color: #ffffff56;
+        background-color: #ffffff96;
       }
     }
   }
