--- a/src/app/parts/urlcopy-dialog/urlcopy-dialog.component.scss
+++ b/src/app/parts/urlcopy-dialog/urlcopy-dialog.component.scss
@@ -48,7 +48,7 @@
       margin-top: 30px;
       margin-bottom: -20px;
       button{
-        width: 100px;
+        // width: 100px;
         height: 40px;
   
         &.cancel{
