--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -556,8 +556,10 @@ $color-grn01: #81C5B4;
     $preview:"プレビュー";
     $edit_en:"Edit";
     $preview_en:"Preview";
+    $height:32px;
+    $radius:16px;
 
-    line-height: 32px;
+    line-height: $height;
     letter-spacing: 0;
     text-align: center;
     font-size: 10px;
@@ -618,9 +620,9 @@ $color-grn01: #81C5B4;
     label{
       display: block;
       box-sizing: border-box;
-      height: 32px;
+      height: $height;
       border: 1px solid $color-pnk02;
-      border-radius: 30px;
+      border-radius: $radius;
 
       span::after{
         content: $edit;
@@ -632,11 +634,11 @@ $color-grn01: #81C5B4;
     #swImg{
       position:absolute;
       width: 70px;
-      height: 32px;
+      height: $height;
       background: $color-pnk02;
       top: 0px;
       left: 0px;
-      border-radius: 16px;
+      border-radius: $radius;
       transition: .2s;
 
       &::before{
@@ -679,6 +681,105 @@ $color-grn01: #81C5B4;
   width: calc(100% - 32px)!important;
   right: 0!important;
   margin: auto!important;
+}
+
+@mixin switchViewProf {
+  .switchViewProf{
+    $edit:"編集する";
+    $preview:"プレビュー表示";
+    $edit_en:"Edit";
+    $preview_en:"Preview";
+    $height:23px;
+    $radius:12px;
+
+    line-height: $height;
+    letter-spacing: 0;
+    text-align: center;
+    font-size: 10px;
+    font-weight: bolder;
+
+    position: relative;
+    width: 180px;
+    background: #fff;
+
+    &.en{
+      input[type="checkbox"]{
+        &:checked +label{
+          span::after{
+            content: $edit_en;
+          }
+        }
+        &:checked ~#swImg{
+          &::before{
+            content: $preview_en;
+          }
+        }
+      }
+
+      label{
+        span::after{
+          content: $preview_en;
+        }
+      }
+
+      #swImg{
+        &::before{
+          content: $edit_en;
+        }
+      }
+    }
+
+    input[type="checkbox"]{
+      display: none;
+      &:checked +label{
+        border-color: $color-pnk02;
+        span::after{
+          content: $edit;
+          padding: 0 86px 0 0;
+          color: $color-pnk02;
+        }
+      }
+
+      &:checked ~#swImg{
+        transform: translateX(92px);
+        background: $color-pnk02;
+        &::before{
+          content: $preview;
+          color: #fff;
+        }
+      }
+    }
+
+    label{
+      display: block;
+      box-sizing: border-box;
+      height: $height;
+      border: 1px solid $color-pnk02;
+      border-radius: $radius;
+
+      span::after{
+        content: $preview;
+        padding: 0 0 0 86px;
+        color: $color-pnk02;
+      }
+    }
+
+    #swImg{
+      position:absolute;
+      width: 88px;
+      height: $height;
+      background: $color-pnk02;
+      top: 0px;
+      left: 0px;
+      border-radius: $radius;
+      transition: .2s;
+
+      &::before{
+        content: $edit;
+        color: #fff;
+      }
+    }
+  }
 }
 
 
