--- a/src/app/pages/mypage-planlist/mypage-planlist.component.scss
+++ b/src/app/pages/mypage-planlist/mypage-planlist.component.scss
@@ -837,7 +837,7 @@ span.sortlink {
             line-height: 2;
             .mat-list-item-content{
               padding: 0 12px 12px;
-              justify-content: end;
+              justify-content: flex-end;
             }
 
             .edit-to-plan{
