--- a/src/app/parts/confirm-message-dialog/confirm-message-dialog.component.html
+++ b/src/app/parts/confirm-message-dialog/confirm-message-dialog.component.html
@@ -1,7 +1,7 @@
 <h2 mat-dialog-title *ngIf="data.title">{{ data.title | translate }}</h2>
 <mat-dialog-content>
-  <span class="text">{{ data.text | translate }}</span>
-  <span class="subtext" *ngIf="data.subText">{{ data.subText | translate }}</span>
+  <p class="text" [innerHtml]="text"></p>
+  <p class="subtext" *ngIf="data.subText" [innerText]="subText"></p>
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-raised-button mat-dialog-close="ok" class="ok">{{ data.leftButton | translate }}</button>
