--- a/src/app/pages/mypage/mypage-reviewlist/mypage-reviewlist.component.scss
+++ b/src/app/pages/mypage/mypage-reviewlist/mypage-reviewlist.component.scss
@@ -31,6 +31,9 @@
           align-items: center;
           padding-bottom: 0;
           padding-right: 0;
+          img{
+            width: 100%;
+          }
           &.planspot{
             justify-content:flex-start;
             .mark{
