--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,30 +1,31 @@
 <header>
-    <mat-toolbar color="primary">
-      <mat-toolbar-row>
-        <span class="logo">
-          <!-- Remoju -->
-          <a href="/{{ currentLang }}/" style="min-height:54px;">
-            <img src="../../../assets/img/remoju-logo-b.svg" class="imgsp" alt="remoju-app" />
-          </a>
-        </span>
-        
-        <span class="menu">
-          <button mat-icon-button class="favorite" aria-label="favorite" matBadge="{{ favcount }}" matBadgeSize="small" (click)="linktoFavorite()">
-            <img src="../../../assets/img/icon_fav.svg" alt="link to Favorite">
-          </button>
+  <mat-toolbar color="primary">
+    <mat-toolbar-row>
+      <span class="logo">
+        <!-- Remoju -->
+        <a href="/{{ currentLang }}/" style="min-height:54px;">
+          <img src="../../../assets/img/remoju-logo-b.svg" class="imgsp" alt="remoju-app" />
+        </a>
+      </span>
 
-          <button mat-icon-button class="user" aria-label="user" (click)="linktoMyplan()">
-            <img src="{{pictureUrl}}" alt="user">
-          </button>
+      <span class="menu">
+        <button mat-icon-button class="favorite" aria-label="favorite" matBadge="{{ favcount }}" matBadgeSize="small"
+          (click)="linktoFavorite()">
+          <img src="../../../assets/img/icon_fav.svg" alt="link to Favorite">
+        </button>
 
-          <button mat-icon-button class="menu" color="primary" aria-label="menu" (click)="toggleactive()">
-            <mat-icon>more_vert</mat-icon>
-          </button>
-        </span>
+        <button mat-icon-button class="user" aria-label="user" (click)="linktoMyplan()">
+          <img src="{{pictureUrl}}" alt="user">
+        </button>
 
-        <div class='guide'>
-          どこに行く？
-        </div>
-      </mat-toolbar-row>
-    </mat-toolbar>
-  </header>
+        <button mat-icon-button class="menu" color="primary" aria-label="menu" (click)="toggleactive()">
+          <mat-icon>more_vert</mat-icon>
+        </button>
+      </span>
+
+      <div class='guide'>
+        どこに行く？
+      </div>
+    </mat-toolbar-row>
+  </mat-toolbar>
+</header>
