--- a/src/app/pages/mypage/mypage-reviewlist/mypage-reviewlist.component.html
+++ b/src/app/pages/mypage/mypage-reviewlist/mypage-reviewlist.component.html
@@ -1,72 +1,97 @@
-<div class='container'>
-  <mat-list>
+
     <ng-container *ngIf="myReviews?.length>0; else noReview">
       <mat-list-item *ngFor="let item of myReviews">
-        <div class='row'>
-          <div class="date">
-            {{ "PostedDate" | translate }} : {{ item.postedDate | date:"yyyy/MM/dd" }}
-          </div>
-        </div>
-        <div class='row picture'>
-          <img src="{{item.pictureUrl}}" alt="">
-        </div>
-        <div class='row planspot'>
-          <div class='mark'>
-            <img src={{genMarkPath(item)}} alt="" />
-          </div>
-          <div class='name'>
-            <ng-container *ngIf="isJSON(item.planSpotName);else noJSON">
-              {{item.planSpotName | langFilter:lang}}
-            </ng-container>
-            <ng-template #noJSON>
-              {{item.planSpotName}}
-            </ng-template>
-          </div>
-        </div>
-        <div class="row">
-          <app-rating-comp [rating]="item.evaluation" [size]=12></app-rating-comp>
-        </div>
-        <div class="title">
-          {{ item.title }}
-        </div>
-        <!-- <div class="content" [ngClass]="{'more':item.ismore}" #elm> -->
-        <div class="content">
-          {{ item.contents }}
-        </div>
-        <div class="line2">
-          <div class="visit">
-            {{ "VisitDate" | translate }} :
-            <ng-container *ngIf="lang==='ja';else den">{{ item.visitDate | date:"yyyy/MM/dd" }}</ng-container>
-            <ng-template #den>{{ item.visitDate | date:"MM/dd/yyyy" }}</ng-template>
-          </div>
-          <!-- <a href="javascript:void(0)" class="continue" [ngClass]="{'off':item.ismore}" (click)="onIsmore(item)">
-            {{item.label}}
-          </a> -->
-        </div>
-        <div class="pic">
-          <owl-carousel-o [options]="reviewOptions">
-            <ng-container *ngFor="let picture of item.pictures; index as i">
-              <ng-template carouselSlide>
-                <div class="thumbnail">
-                  <img [src]="picture.pictureUrl" alt="" lightbox [backgroundOpacity]="0.8" />
+        <mat-card id="myPlan-review">
+          <mat-card-content>
+            <div class='header'>
+              <div class='lt'>
+                <span class='avatar'>
+                  <img [src]="genUserPicture()" [alt]="genUserName()">
+                  <span class="username">{{genUserName()}}</span>
+                </span>
+              </div>
+              <div class='rt fav'>
+                <span class='mark'>
+                  <img [src]="genMarkPath(item)" alt="mark">
+                </span>
+                <span class='title'>
+                  <ng-container *ngIf="isJSON(item.planSpotName);else noJSON">
+                    {{item.planSpotName | langFilter:lang}}
+                  </ng-container>
+                  <ng-template #noJSON>
+                    {{item.planSpotName}}
+                  </ng-template>
+                </span>
+              </div>
+            </div>
+            <div class='card-box'>
+              <div class='card-header'>
+                <div class='picture'>
+                  <div class="thumbmain fullwidth">
+                      <img
+                        [src]="item.pictureUrl"
+                        [alt]=""
+                        [title]=""
+                      />
+                  </div>
                 </div>
-              </ng-template>
-            </ng-container>
-          </owl-carousel-o>
-        </div>
-        <div class="btnedit">
-          <button class="edit" mat-stroked-button (click)="onClickPosted(item)">
-            {{ "Edit" | translate }}
-          </button>
-          <!-- <button class="remove" mat-stroked-button (click)="onClickDelete(item)">
-            {{ "Remove" | translate }}
-          </button> -->
-        </div>
-        <div class="delete">
-          <button class="deletePlan" (click)="onClickDelete(item)">
-            <i class="material-icons">clear</i>
-          </button>
-        </div>
+              </div>
+              <div class='card-bottom'>
+                <mat-list>
+                  <mat-list-item class="bottom-view">
+                    <div class='row'>
+                      <span class='view'>
+                        {{ "PostedDate" | translate }} : {{ item.postedDate | date:"yyyy/MM/dd" }}
+                      </span>
+                      <span class='view'>
+                        <app-rating-comp [rating]="item.evaluation" [size]=12></app-rating-comp>
+                      </span>
+                    </div>
+                  </mat-list-item>
+                  <mat-list-item class="row">
+                      {{ item.title }}                    
+                  </mat-list-item>
+                  <mat-list-item class="row">
+                    <p>
+                      {{ item.contents }}                    
+                    </p>
+                  </mat-list-item>                  
+                  <mat-list-item class="row">
+                    {{ "VisitDate" | translate }} :
+                    <ng-container *ngIf="lang==='ja';else den">{{ item.visitDate | date:"yyyy/MM/dd" }}</ng-container>
+                    <ng-template #den>{{ item.visitDate | date:"MM/dd/yyyy" }}</ng-template>
+                  </mat-list-item>
+                    
+                  <mat-list-item>
+                    <div class='pic'>
+                      <owl-carousel-o [options]="reviewOptions">
+                        <ng-container *ngFor="let picture of item.pictures; index as i">
+                          <ng-template carouselSlide>
+                            <div class="thumbnail">
+                              <img [src]="picture.pictureUrl" alt="" lightbox [backgroundOpacity]="0.8" />
+                            </div>
+                          </ng-template>
+                        </ng-container>
+                      </owl-carousel-o>
+                    </div>
+                  </mat-list-item>
+
+                  <mat-list-item class="btnedit">
+                    <button class="edit" mat-stroked-button (click)="onClickPosted(item)">
+                      {{ "Edit" | translate }}
+                    </button>
+                  </mat-list-item>
+                  
+                  <button class="deletePlan" (click)="onClickDelete(item)">
+                    <i class="material-icons">clear</i>
+                  </button>
+                
+                </mat-list>
+              </div>
+              <div class='link-area' (click)="linktoDetail(item.id)"></div>
+            </div>
+          </mat-card-content>
+        </mat-card>
       </mat-list-item>
     </ng-container>
     <ng-template #noReview>
@@ -74,5 +99,4 @@
         <p>{{"NoReviewMsg"|translate}}</p>
       </div>
     </ng-template>
-  </mat-list>
-</div>
+  
