--- a/src/app/pages/mypage/mypage-reviewlist/mypage-reviewlist.component.scss
+++ b/src/app/pages/mypage/mypage-reviewlist/mypage-reviewlist.component.scss
@@ -1,5 +1,12 @@
 @import "../../../../assets/scss/vars";
 
+#noReview{
+  p{
+    border: $color-gry07 solid 1px;
+    border-radius: 10px;
+    padding: 15px;
+  }
+}
 #myPlan-review {
   padding: 0;
 
