REMOJU-380 プラン作成　出発地到着地の候補表示不具合

--- a/src/app/parts/google-spot-dialog/google-spot-dialog.component.html
+++ b/src/app/parts/google-spot-dialog/google-spot-dialog.component.html
@@ -7,9 +7,9 @@
       <input
         matInput
         #keyword
-        id="keyword"
-        value="{{ place ? place.name : '' }}" />
+        id="keyword" />
     </mat-form-field>
+    <span>{{ place ? place.name : '' }}</span>
   </div>
   <div class="mapDiv">
     <agm-map
