--- a/src/app/parts/memo-dialog/memo-dialog.component.html
+++ b/src/app/parts/memo-dialog/memo-dialog.component.html
@@ -1,15 +1,16 @@
 <h2 mat-dialog-title>{{ 'ReleaseConfirm' | translate }}</h2>
 <mat-dialog-content>
-  <mat-form-field>
+  <mat-form-field appearance="outline">
     <mat-label>{{ 'Memo' | translate }}</mat-label>
     <textarea
       matInput
       #memo
       name="memo"
       rows="5"
-      placeholder="{{ 'Memo' | translate }}"
       #inputinfo="ngModel"
-      [(ngModel)]="data"></textarea>
+      [(ngModel)]="data"
+      maxlength="100"
+      ></textarea>
     <mat-hint align="end">{{ data?.length || 0}}/100{{ "Characters" | translate }} &nbsp;<a href="javascript:void(0);" (click)="data='';">{{"labelClear" | translate}}</a></mat-hint>
   </mat-form-field>
 </mat-dialog-content>
